--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "hh-mm-ss": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
@@ -74,7 +75,9 @@
     "redux": "^4.2.1",
     "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.0.7",
+    "suneditor": "^2.45.1",
     "suneditor-react": "^3.6.1",
     "sweetalert2": "^11.7.23",
     "swiper": "^10.2.0",
