--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-select": "^5.7.4",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
